[package]
name = "declareman"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Mohr"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.1.6", features = ["derive"]}
directories = "4.0.1"
serde = {version = "1.0.152", features = ["derive"]}
thiserror = "1.0.38"
toml = "0.7.2"
walkdir = "2.3.2"
